parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AUTO
    BITAND
    BITOR
    BREAK
    CASE
    COMMENT
    CONTINUE
    DEFAULT
    DEFINE
    DO
    ENDIF
    ENUM
    GOTO
    IFNDEF
    LBRACK
    LCOMMENT
    MEMBER
    NUMBER
    RBRACK
    REGISTER
    RESTRICT
    RETURN
    SIZEOF
    STATIC
    STRUCT
    SWITCH
    TYPEDEF
    UNION
    _ALIGNAS
    _ALIGNOF
    _ATOMIC
    _BOOL
    _COMPLEX
    _GENERIC
    _IMAGERY
    _NORETURN
    _STATIC_ASSERT
    _THREAD_LOCAL

Grammar

Rule 0     S' -> node_list
Rule 1     node_list -> <empty>
Rule 2     node_list -> node_list node
Rule 3     node -> include
Rule 4     node -> func_def
Rule 5     node -> func_call
Rule 6     node -> statement
Rule 7     node -> control_expr
Rule 8     literal -> FLOAT
Rule 9     literal -> INT
Rule 10    literal -> CHAR
Rule 11    literal -> STRING
Rule 12    literal -> NONDECIMAL
Rule 13    assign -> SIMPLE_ASSIGN
Rule 14    assign -> COMPLEX_ASSIGN
Rule 15    dtype -> CHAR
Rule 16    dtype -> DOUBLE
Rule 17    dtype -> FLOAT
Rule 18    dtype -> INT
Rule 19    dtype -> VOID
Rule 20    dtype -> UINT8_T
Rule 21    dtype -> UINT16_T
Rule 22    dtype -> dtype ASTERISK
Rule 23    modifier -> CONST
Rule 24    modifier -> EXTERN
Rule 25    modifier -> INLINE
Rule 26    modifier -> LONG
Rule 27    modifier -> SHORT
Rule 28    modifier -> SIGNED
Rule 29    modifier -> UNSIGNED
Rule 30    modifier -> VOLATILE
Rule 31    include -> INCLUDE
Rule 32    control -> WHILE
Rule 33    control -> IF
Rule 34    control -> ELSE
Rule 35    conditional -> EQ
Rule 36    conditional -> NEQ
Rule 37    conditional -> LT
Rule 38    conditional -> GT
Rule 39    conditional -> LE
Rule 40    conditional -> GE
Rule 41    conditional -> AND
Rule 42    conditional -> OR
Rule 43    conditional_expr -> ID conditional expression
Rule 44    conditional_expr -> expression conditional ID
Rule 45    conditional_expr -> expression conditional expression
Rule 46    conditional_expr -> ID conditional ID
Rule 47    for_loop -> FOR LPAREN init_var conditional_expr SEMI ID INCREMENT RPAREN
Rule 48    control_expr -> control LPAREN conditional_expr RPAREN LBRACE node_list RBRACE
Rule 49    control_expr -> control LBRACE node_list RBRACE
Rule 50    control_expr -> for_loop LBRACE node_list RBRACE
Rule 51    func_arg -> ID
Rule 52    func_arg -> expression
Rule 53    func_arg -> dtype ID
Rule 54    func_arg -> dtype
Rule 55    func_arglist -> <empty>
Rule 56    func_arglist -> func_arglist func_arg
Rule 57    func_arglist -> func_arglist func_arg COMMA
Rule 58    func_def -> dtype ID LPAREN func_arglist RPAREN LBRACE node_list RBRACE
Rule 59    func_call -> ID LPAREN func_arglist RPAREN SEMI
Rule 60    statement -> init_var
Rule 61    statement -> assign_var
Rule 62    statement -> declare_var
Rule 63    statement -> increment
Rule 64    expression -> literal
Rule 65    expression -> LPAREN expression RPAREN
Rule 66    expression -> NEGATE expression
Rule 67    expression -> MINUS expression
Rule 68    binop -> PLUS
Rule 69    binop -> MINUS
Rule 70    binop -> ASTERISK
Rule 71    binop -> DIVIDE
Rule 72    binop -> LSHIFT
Rule 73    binop -> RSHIFT
Rule 74    binop -> PERCENT
Rule 75    expression -> expression binop ID
Rule 76    expression -> ID binop expression
Rule 77    increment -> ID INCREMENT SEMI
Rule 78    declare_var -> dtype ID SEMI
Rule 79    declare_var -> modifier dtype ID SEMI
Rule 80    init_var_ls -> modifier dtype ID assign
Rule 81    init_var_ls -> dtype ID assign
Rule 82    init_var_rs -> literal SEMI
Rule 83    init_var_rs -> ID SEMI
Rule 84    init_var_rs -> LPAREN dtype RPAREN literal SEMI
Rule 85    init_var_rs -> LPAREN dtype RPAREN ID SEMI
Rule 86    init_var_rs -> func_call
Rule 87    init_var -> init_var_ls init_var_rs
Rule 88    assign_var -> ID assign expression SEMI

Terminals, with rules where they appear

AND                  : 41
ASTERISK             : 22 70
AUTO                 : 
BITAND               : 
BITOR                : 
BREAK                : 
CASE                 : 
CHAR                 : 10 15
COMMA                : 57
COMMENT              : 
COMPLEX_ASSIGN       : 14
CONST                : 23
CONTINUE             : 
DEFAULT              : 
DEFINE               : 
DIVIDE               : 71
DO                   : 
DOUBLE               : 16
ELSE                 : 34
ENDIF                : 
ENUM                 : 
EQ                   : 35
EXTERN               : 24
FLOAT                : 8 17
FOR                  : 47
GE                   : 40
GOTO                 : 
GT                   : 38
ID                   : 43 44 46 46 47 51 53 58 59 75 76 77 78 79 80 81 83 85 88
IF                   : 33
IFNDEF               : 
INCLUDE              : 31
INCREMENT            : 47 77
INLINE               : 25
INT                  : 9 18
LBRACE               : 48 49 50 58
LBRACK               : 
LCOMMENT             : 
LE                   : 39
LONG                 : 26
LPAREN               : 47 48 58 59 65 84 85
LSHIFT               : 72
LT                   : 37
MEMBER               : 
MINUS                : 67 69
NEGATE               : 66
NEQ                  : 36
NONDECIMAL           : 12
NUMBER               : 
OR                   : 42
PERCENT              : 74
PLUS                 : 68
RBRACE               : 48 49 50 58
RBRACK               : 
REGISTER             : 
RESTRICT             : 
RETURN               : 
RPAREN               : 47 48 58 59 65 84 85
RSHIFT               : 73
SEMI                 : 47 59 77 78 79 82 83 84 85 88
SHORT                : 27
SIGNED               : 28
SIMPLE_ASSIGN        : 13
SIZEOF               : 
STATIC               : 
STRING               : 11
STRUCT               : 
SWITCH               : 
TYPEDEF              : 
UINT16_T             : 21
UINT8_T              : 20
UNION                : 
UNSIGNED             : 29
VOID                 : 19
VOLATILE             : 30
WHILE                : 32
_ALIGNAS             : 
_ALIGNOF             : 
_ATOMIC              : 
_BOOL                : 
_COMPLEX             : 
_GENERIC             : 
_IMAGERY             : 
_NORETURN            : 
_STATIC_ASSERT       : 
_THREAD_LOCAL        : 
error                : 

Nonterminals, with rules where they appear

assign               : 80 81 88
assign_var           : 61
binop                : 75 76
conditional          : 43 44 45 46
conditional_expr     : 47 48
control              : 48 49
control_expr         : 7
declare_var          : 62
dtype                : 22 53 54 58 78 79 80 81 84 85
expression           : 43 44 45 45 52 65 66 67 75 76 88
for_loop             : 50
func_arg             : 56 57
func_arglist         : 56 57 58 59
func_call            : 5 86
func_def             : 4
include              : 3
increment            : 63
init_var             : 47 60
init_var_ls          : 87
init_var_rs          : 87
literal              : 64 82 84
modifier             : 79 80
node                 : 2
node_list            : 2 48 49 50 58 0
statement            : 6

Parsing method: LALR

state 0

    (0) S' -> . node_list
    (1) node_list -> .
    (2) node_list -> . node_list node

    INCLUDE         reduce using rule 1 (node_list -> .)
    ID              reduce using rule 1 (node_list -> .)
    CHAR            reduce using rule 1 (node_list -> .)
    DOUBLE          reduce using rule 1 (node_list -> .)
    FLOAT           reduce using rule 1 (node_list -> .)
    INT             reduce using rule 1 (node_list -> .)
    VOID            reduce using rule 1 (node_list -> .)
    UINT8_T         reduce using rule 1 (node_list -> .)
    UINT16_T        reduce using rule 1 (node_list -> .)
    WHILE           reduce using rule 1 (node_list -> .)
    IF              reduce using rule 1 (node_list -> .)
    ELSE            reduce using rule 1 (node_list -> .)
    FOR             reduce using rule 1 (node_list -> .)
    CONST           reduce using rule 1 (node_list -> .)
    EXTERN          reduce using rule 1 (node_list -> .)
    INLINE          reduce using rule 1 (node_list -> .)
    LONG            reduce using rule 1 (node_list -> .)
    SHORT           reduce using rule 1 (node_list -> .)
    SIGNED          reduce using rule 1 (node_list -> .)
    UNSIGNED        reduce using rule 1 (node_list -> .)
    VOLATILE        reduce using rule 1 (node_list -> .)
    $end            reduce using rule 1 (node_list -> .)

    node_list                      shift and go to state 1

state 1

    (0) S' -> node_list .
    (2) node_list -> node_list . node
    (3) node -> . include
    (4) node -> . func_def
    (5) node -> . func_call
    (6) node -> . statement
    (7) node -> . control_expr
    (31) include -> . INCLUDE
    (58) func_def -> . dtype ID LPAREN func_arglist RPAREN LBRACE node_list RBRACE
    (59) func_call -> . ID LPAREN func_arglist RPAREN SEMI
    (60) statement -> . init_var
    (61) statement -> . assign_var
    (62) statement -> . declare_var
    (63) statement -> . increment
    (48) control_expr -> . control LPAREN conditional_expr RPAREN LBRACE node_list RBRACE
    (49) control_expr -> . control LBRACE node_list RBRACE
    (50) control_expr -> . for_loop LBRACE node_list RBRACE
    (15) dtype -> . CHAR
    (16) dtype -> . DOUBLE
    (17) dtype -> . FLOAT
    (18) dtype -> . INT
    (19) dtype -> . VOID
    (20) dtype -> . UINT8_T
    (21) dtype -> . UINT16_T
    (22) dtype -> . dtype ASTERISK
    (87) init_var -> . init_var_ls init_var_rs
    (88) assign_var -> . ID assign expression SEMI
    (78) declare_var -> . dtype ID SEMI
    (79) declare_var -> . modifier dtype ID SEMI
    (77) increment -> . ID INCREMENT SEMI
    (32) control -> . WHILE
    (33) control -> . IF
    (34) control -> . ELSE
    (47) for_loop -> . FOR LPAREN init_var conditional_expr SEMI ID INCREMENT RPAREN
    (80) init_var_ls -> . modifier dtype ID assign
    (81) init_var_ls -> . dtype ID assign
    (23) modifier -> . CONST
    (24) modifier -> . EXTERN
    (25) modifier -> . INLINE
    (26) modifier -> . LONG
    (27) modifier -> . SHORT
    (28) modifier -> . SIGNED
    (29) modifier -> . UNSIGNED
    (30) modifier -> . VOLATILE

    INCLUDE         shift and go to state 8
    ID              shift and go to state 10
    CHAR            shift and go to state 17
    DOUBLE          shift and go to state 18
    FLOAT           shift and go to state 19
    INT             shift and go to state 20
    VOID            shift and go to state 21
    UINT8_T         shift and go to state 22
    UINT16_T        shift and go to state 23
    WHILE           shift and go to state 26
    IF              shift and go to state 27
    ELSE            shift and go to state 28
    FOR             shift and go to state 29
    CONST           shift and go to state 30
    EXTERN          shift and go to state 31
    INLINE          shift and go to state 32
    LONG            shift and go to state 33
    SHORT           shift and go to state 34
    SIGNED          shift and go to state 35
    UNSIGNED        shift and go to state 36
    VOLATILE        shift and go to state 37

    node                           shift and go to state 2
    include                        shift and go to state 3
    func_def                       shift and go to state 4
    func_call                      shift and go to state 5
    statement                      shift and go to state 6
    control_expr                   shift and go to state 7
    dtype                          shift and go to state 9
    init_var                       shift and go to state 11
    assign_var                     shift and go to state 12
    declare_var                    shift and go to state 13
    increment                      shift and go to state 14
    control                        shift and go to state 15
    for_loop                       shift and go to state 16
    init_var_ls                    shift and go to state 24
    modifier                       shift and go to state 25

state 2

    (2) node_list -> node_list node .

    INCLUDE         reduce using rule 2 (node_list -> node_list node .)
    ID              reduce using rule 2 (node_list -> node_list node .)
    CHAR            reduce using rule 2 (node_list -> node_list node .)
    DOUBLE          reduce using rule 2 (node_list -> node_list node .)
    FLOAT           reduce using rule 2 (node_list -> node_list node .)
    INT             reduce using rule 2 (node_list -> node_list node .)
    VOID            reduce using rule 2 (node_list -> node_list node .)
    UINT8_T         reduce using rule 2 (node_list -> node_list node .)
    UINT16_T        reduce using rule 2 (node_list -> node_list node .)
    WHILE           reduce using rule 2 (node_list -> node_list node .)
    IF              reduce using rule 2 (node_list -> node_list node .)
    ELSE            reduce using rule 2 (node_list -> node_list node .)
    FOR             reduce using rule 2 (node_list -> node_list node .)
    CONST           reduce using rule 2 (node_list -> node_list node .)
    EXTERN          reduce using rule 2 (node_list -> node_list node .)
    INLINE          reduce using rule 2 (node_list -> node_list node .)
    LONG            reduce using rule 2 (node_list -> node_list node .)
    SHORT           reduce using rule 2 (node_list -> node_list node .)
    SIGNED          reduce using rule 2 (node_list -> node_list node .)
    UNSIGNED        reduce using rule 2 (node_list -> node_list node .)
    VOLATILE        reduce using rule 2 (node_list -> node_list node .)
    $end            reduce using rule 2 (node_list -> node_list node .)
    RBRACE          reduce using rule 2 (node_list -> node_list node .)


state 3

    (3) node -> include .

    INCLUDE         reduce using rule 3 (node -> include .)
    ID              reduce using rule 3 (node -> include .)
    CHAR            reduce using rule 3 (node -> include .)
    DOUBLE          reduce using rule 3 (node -> include .)
    FLOAT           reduce using rule 3 (node -> include .)
    INT             reduce using rule 3 (node -> include .)
    VOID            reduce using rule 3 (node -> include .)
    UINT8_T         reduce using rule 3 (node -> include .)
    UINT16_T        reduce using rule 3 (node -> include .)
    WHILE           reduce using rule 3 (node -> include .)
    IF              reduce using rule 3 (node -> include .)
    ELSE            reduce using rule 3 (node -> include .)
    FOR             reduce using rule 3 (node -> include .)
    CONST           reduce using rule 3 (node -> include .)
    EXTERN          reduce using rule 3 (node -> include .)
    INLINE          reduce using rule 3 (node -> include .)
    LONG            reduce using rule 3 (node -> include .)
    SHORT           reduce using rule 3 (node -> include .)
    SIGNED          reduce using rule 3 (node -> include .)
    UNSIGNED        reduce using rule 3 (node -> include .)
    VOLATILE        reduce using rule 3 (node -> include .)
    $end            reduce using rule 3 (node -> include .)
    RBRACE          reduce using rule 3 (node -> include .)


state 4

    (4) node -> func_def .

    INCLUDE         reduce using rule 4 (node -> func_def .)
    ID              reduce using rule 4 (node -> func_def .)
    CHAR            reduce using rule 4 (node -> func_def .)
    DOUBLE          reduce using rule 4 (node -> func_def .)
    FLOAT           reduce using rule 4 (node -> func_def .)
    INT             reduce using rule 4 (node -> func_def .)
    VOID            reduce using rule 4 (node -> func_def .)
    UINT8_T         reduce using rule 4 (node -> func_def .)
    UINT16_T        reduce using rule 4 (node -> func_def .)
    WHILE           reduce using rule 4 (node -> func_def .)
    IF              reduce using rule 4 (node -> func_def .)
    ELSE            reduce using rule 4 (node -> func_def .)
    FOR             reduce using rule 4 (node -> func_def .)
    CONST           reduce using rule 4 (node -> func_def .)
    EXTERN          reduce using rule 4 (node -> func_def .)
    INLINE          reduce using rule 4 (node -> func_def .)
    LONG            reduce using rule 4 (node -> func_def .)
    SHORT           reduce using rule 4 (node -> func_def .)
    SIGNED          reduce using rule 4 (node -> func_def .)
    UNSIGNED        reduce using rule 4 (node -> func_def .)
    VOLATILE        reduce using rule 4 (node -> func_def .)
    $end            reduce using rule 4 (node -> func_def .)
    RBRACE          reduce using rule 4 (node -> func_def .)


state 5

    (5) node -> func_call .

    INCLUDE         reduce using rule 5 (node -> func_call .)
    ID              reduce using rule 5 (node -> func_call .)
    CHAR            reduce using rule 5 (node -> func_call .)
    DOUBLE          reduce using rule 5 (node -> func_call .)
    FLOAT           reduce using rule 5 (node -> func_call .)
    INT             reduce using rule 5 (node -> func_call .)
    VOID            reduce using rule 5 (node -> func_call .)
    UINT8_T         reduce using rule 5 (node -> func_call .)
    UINT16_T        reduce using rule 5 (node -> func_call .)
    WHILE           reduce using rule 5 (node -> func_call .)
    IF              reduce using rule 5 (node -> func_call .)
    ELSE            reduce using rule 5 (node -> func_call .)
    FOR             reduce using rule 5 (node -> func_call .)
    CONST           reduce using rule 5 (node -> func_call .)
    EXTERN          reduce using rule 5 (node -> func_call .)
    INLINE          reduce using rule 5 (node -> func_call .)
    LONG            reduce using rule 5 (node -> func_call .)
    SHORT           reduce using rule 5 (node -> func_call .)
    SIGNED          reduce using rule 5 (node -> func_call .)
    UNSIGNED        reduce using rule 5 (node -> func_call .)
    VOLATILE        reduce using rule 5 (node -> func_call .)
    $end            reduce using rule 5 (node -> func_call .)
    RBRACE          reduce using rule 5 (node -> func_call .)


state 6

    (6) node -> statement .

    INCLUDE         reduce using rule 6 (node -> statement .)
    ID              reduce using rule 6 (node -> statement .)
    CHAR            reduce using rule 6 (node -> statement .)
    DOUBLE          reduce using rule 6 (node -> statement .)
    FLOAT           reduce using rule 6 (node -> statement .)
    INT             reduce using rule 6 (node -> statement .)
    VOID            reduce using rule 6 (node -> statement .)
    UINT8_T         reduce using rule 6 (node -> statement .)
    UINT16_T        reduce using rule 6 (node -> statement .)
    WHILE           reduce using rule 6 (node -> statement .)
    IF              reduce using rule 6 (node -> statement .)
    ELSE            reduce using rule 6 (node -> statement .)
    FOR             reduce using rule 6 (node -> statement .)
    CONST           reduce using rule 6 (node -> statement .)
    EXTERN          reduce using rule 6 (node -> statement .)
    INLINE          reduce using rule 6 (node -> statement .)
    LONG            reduce using rule 6 (node -> statement .)
    SHORT           reduce using rule 6 (node -> statement .)
    SIGNED          reduce using rule 6 (node -> statement .)
    UNSIGNED        reduce using rule 6 (node -> statement .)
    VOLATILE        reduce using rule 6 (node -> statement .)
    $end            reduce using rule 6 (node -> statement .)
    RBRACE          reduce using rule 6 (node -> statement .)


state 7

    (7) node -> control_expr .

    INCLUDE         reduce using rule 7 (node -> control_expr .)
    ID              reduce using rule 7 (node -> control_expr .)
    CHAR            reduce using rule 7 (node -> control_expr .)
    DOUBLE          reduce using rule 7 (node -> control_expr .)
    FLOAT           reduce using rule 7 (node -> control_expr .)
    INT             reduce using rule 7 (node -> control_expr .)
    VOID            reduce using rule 7 (node -> control_expr .)
    UINT8_T         reduce using rule 7 (node -> control_expr .)
    UINT16_T        reduce using rule 7 (node -> control_expr .)
    WHILE           reduce using rule 7 (node -> control_expr .)
    IF              reduce using rule 7 (node -> control_expr .)
    ELSE            reduce using rule 7 (node -> control_expr .)
    FOR             reduce using rule 7 (node -> control_expr .)
    CONST           reduce using rule 7 (node -> control_expr .)
    EXTERN          reduce using rule 7 (node -> control_expr .)
    INLINE          reduce using rule 7 (node -> control_expr .)
    LONG            reduce using rule 7 (node -> control_expr .)
    SHORT           reduce using rule 7 (node -> control_expr .)
    SIGNED          reduce using rule 7 (node -> control_expr .)
    UNSIGNED        reduce using rule 7 (node -> control_expr .)
    VOLATILE        reduce using rule 7 (node -> control_expr .)
    $end            reduce using rule 7 (node -> control_expr .)
    RBRACE          reduce using rule 7 (node -> control_expr .)


state 8

    (31) include -> INCLUDE .

    INCLUDE         reduce using rule 31 (include -> INCLUDE .)
    ID              reduce using rule 31 (include -> INCLUDE .)
    CHAR            reduce using rule 31 (include -> INCLUDE .)
    DOUBLE          reduce using rule 31 (include -> INCLUDE .)
    FLOAT           reduce using rule 31 (include -> INCLUDE .)
    INT             reduce using rule 31 (include -> INCLUDE .)
    VOID            reduce using rule 31 (include -> INCLUDE .)
    UINT8_T         reduce using rule 31 (include -> INCLUDE .)
    UINT16_T        reduce using rule 31 (include -> INCLUDE .)
    WHILE           reduce using rule 31 (include -> INCLUDE .)
    IF              reduce using rule 31 (include -> INCLUDE .)
    ELSE            reduce using rule 31 (include -> INCLUDE .)
    FOR             reduce using rule 31 (include -> INCLUDE .)
    CONST           reduce using rule 31 (include -> INCLUDE .)
    EXTERN          reduce using rule 31 (include -> INCLUDE .)
    INLINE          reduce using rule 31 (include -> INCLUDE .)
    LONG            reduce using rule 31 (include -> INCLUDE .)
    SHORT           reduce using rule 31 (include -> INCLUDE .)
    SIGNED          reduce using rule 31 (include -> INCLUDE .)
    UNSIGNED        reduce using rule 31 (include -> INCLUDE .)
    VOLATILE        reduce using rule 31 (include -> INCLUDE .)
    $end            reduce using rule 31 (include -> INCLUDE .)
    RBRACE          reduce using rule 31 (include -> INCLUDE .)


state 9

    (58) func_def -> dtype . ID LPAREN func_arglist RPAREN LBRACE node_list RBRACE
    (22) dtype -> dtype . ASTERISK
    (78) declare_var -> dtype . ID SEMI
    (81) init_var_ls -> dtype . ID assign

    ID              shift and go to state 38
    ASTERISK        shift and go to state 39


state 10

    (59) func_call -> ID . LPAREN func_arglist RPAREN SEMI
    (88) assign_var -> ID . assign expression SEMI
    (77) increment -> ID . INCREMENT SEMI
    (13) assign -> . SIMPLE_ASSIGN
    (14) assign -> . COMPLEX_ASSIGN

    LPAREN          shift and go to state 40
    INCREMENT       shift and go to state 42
    SIMPLE_ASSIGN   shift and go to state 43
    COMPLEX_ASSIGN  shift and go to state 44

    assign                         shift and go to state 41

state 11

    (60) statement -> init_var .

    INCLUDE         reduce using rule 60 (statement -> init_var .)
    ID              reduce using rule 60 (statement -> init_var .)
    CHAR            reduce using rule 60 (statement -> init_var .)
    DOUBLE          reduce using rule 60 (statement -> init_var .)
    FLOAT           reduce using rule 60 (statement -> init_var .)
    INT             reduce using rule 60 (statement -> init_var .)
    VOID            reduce using rule 60 (statement -> init_var .)
    UINT8_T         reduce using rule 60 (statement -> init_var .)
    UINT16_T        reduce using rule 60 (statement -> init_var .)
    WHILE           reduce using rule 60 (statement -> init_var .)
    IF              reduce using rule 60 (statement -> init_var .)
    ELSE            reduce using rule 60 (statement -> init_var .)
    FOR             reduce using rule 60 (statement -> init_var .)
    CONST           reduce using rule 60 (statement -> init_var .)
    EXTERN          reduce using rule 60 (statement -> init_var .)
    INLINE          reduce using rule 60 (statement -> init_var .)
    LONG            reduce using rule 60 (statement -> init_var .)
    SHORT           reduce using rule 60 (statement -> init_var .)
    SIGNED          reduce using rule 60 (statement -> init_var .)
    UNSIGNED        reduce using rule 60 (statement -> init_var .)
    VOLATILE        reduce using rule 60 (statement -> init_var .)
    $end            reduce using rule 60 (statement -> init_var .)
    RBRACE          reduce using rule 60 (statement -> init_var .)


state 12

    (61) statement -> assign_var .

    INCLUDE         reduce using rule 61 (statement -> assign_var .)
    ID              reduce using rule 61 (statement -> assign_var .)
    CHAR            reduce using rule 61 (statement -> assign_var .)
    DOUBLE          reduce using rule 61 (statement -> assign_var .)
    FLOAT           reduce using rule 61 (statement -> assign_var .)
    INT             reduce using rule 61 (statement -> assign_var .)
    VOID            reduce using rule 61 (statement -> assign_var .)
    UINT8_T         reduce using rule 61 (statement -> assign_var .)
    UINT16_T        reduce using rule 61 (statement -> assign_var .)
    WHILE           reduce using rule 61 (statement -> assign_var .)
    IF              reduce using rule 61 (statement -> assign_var .)
    ELSE            reduce using rule 61 (statement -> assign_var .)
    FOR             reduce using rule 61 (statement -> assign_var .)
    CONST           reduce using rule 61 (statement -> assign_var .)
    EXTERN          reduce using rule 61 (statement -> assign_var .)
    INLINE          reduce using rule 61 (statement -> assign_var .)
    LONG            reduce using rule 61 (statement -> assign_var .)
    SHORT           reduce using rule 61 (statement -> assign_var .)
    SIGNED          reduce using rule 61 (statement -> assign_var .)
    UNSIGNED        reduce using rule 61 (statement -> assign_var .)
    VOLATILE        reduce using rule 61 (statement -> assign_var .)
    $end            reduce using rule 61 (statement -> assign_var .)
    RBRACE          reduce using rule 61 (statement -> assign_var .)


state 13

    (62) statement -> declare_var .

    INCLUDE         reduce using rule 62 (statement -> declare_var .)
    ID              reduce using rule 62 (statement -> declare_var .)
    CHAR            reduce using rule 62 (statement -> declare_var .)
    DOUBLE          reduce using rule 62 (statement -> declare_var .)
    FLOAT           reduce using rule 62 (statement -> declare_var .)
    INT             reduce using rule 62 (statement -> declare_var .)
    VOID            reduce using rule 62 (statement -> declare_var .)
    UINT8_T         reduce using rule 62 (statement -> declare_var .)
    UINT16_T        reduce using rule 62 (statement -> declare_var .)
    WHILE           reduce using rule 62 (statement -> declare_var .)
    IF              reduce using rule 62 (statement -> declare_var .)
    ELSE            reduce using rule 62 (statement -> declare_var .)
    FOR             reduce using rule 62 (statement -> declare_var .)
    CONST           reduce using rule 62 (statement -> declare_var .)
    EXTERN          reduce using rule 62 (statement -> declare_var .)
    INLINE          reduce using rule 62 (statement -> declare_var .)
    LONG            reduce using rule 62 (statement -> declare_var .)
    SHORT           reduce using rule 62 (statement -> declare_var .)
    SIGNED          reduce using rule 62 (statement -> declare_var .)
    UNSIGNED        reduce using rule 62 (statement -> declare_var .)
    VOLATILE        reduce using rule 62 (statement -> declare_var .)
    $end            reduce using rule 62 (statement -> declare_var .)
    RBRACE          reduce using rule 62 (statement -> declare_var .)


state 14

    (63) statement -> increment .

    INCLUDE         reduce using rule 63 (statement -> increment .)
    ID              reduce using rule 63 (statement -> increment .)
    CHAR            reduce using rule 63 (statement -> increment .)
    DOUBLE          reduce using rule 63 (statement -> increment .)
    FLOAT           reduce using rule 63 (statement -> increment .)
    INT             reduce using rule 63 (statement -> increment .)
    VOID            reduce using rule 63 (statement -> increment .)
    UINT8_T         reduce using rule 63 (statement -> increment .)
    UINT16_T        reduce using rule 63 (statement -> increment .)
    WHILE           reduce using rule 63 (statement -> increment .)
    IF              reduce using rule 63 (statement -> increment .)
    ELSE            reduce using rule 63 (statement -> increment .)
    FOR             reduce using rule 63 (statement -> increment .)
    CONST           reduce using rule 63 (statement -> increment .)
    EXTERN          reduce using rule 63 (statement -> increment .)
    INLINE          reduce using rule 63 (statement -> increment .)
    LONG            reduce using rule 63 (statement -> increment .)
    SHORT           reduce using rule 63 (statement -> increment .)
    SIGNED          reduce using rule 63 (statement -> increment .)
    UNSIGNED        reduce using rule 63 (statement -> increment .)
    VOLATILE        reduce using rule 63 (statement -> increment .)
    $end            reduce using rule 63 (statement -> increment .)
    RBRACE          reduce using rule 63 (statement -> increment .)


state 15

    (48) control_expr -> control . LPAREN conditional_expr RPAREN LBRACE node_list RBRACE
    (49) control_expr -> control . LBRACE node_list RBRACE

    LPAREN          shift and go to state 45
    LBRACE          shift and go to state 46


state 16

    (50) control_expr -> for_loop . LBRACE node_list RBRACE

    LBRACE          shift and go to state 47


state 17

    (15) dtype -> CHAR .

    ID              reduce using rule 15 (dtype -> CHAR .)
    ASTERISK        reduce using rule 15 (dtype -> CHAR .)
    RPAREN          reduce using rule 15 (dtype -> CHAR .)


state 18

    (16) dtype -> DOUBLE .

    ID              reduce using rule 16 (dtype -> DOUBLE .)
    ASTERISK        reduce using rule 16 (dtype -> DOUBLE .)
    RPAREN          reduce using rule 16 (dtype -> DOUBLE .)
    COMMA           reduce using rule 16 (dtype -> DOUBLE .)
    LPAREN          reduce using rule 16 (dtype -> DOUBLE .)
    NEGATE          reduce using rule 16 (dtype -> DOUBLE .)
    MINUS           reduce using rule 16 (dtype -> DOUBLE .)
    CHAR            reduce using rule 16 (dtype -> DOUBLE .)
    DOUBLE          reduce using rule 16 (dtype -> DOUBLE .)
    FLOAT           reduce using rule 16 (dtype -> DOUBLE .)
    INT             reduce using rule 16 (dtype -> DOUBLE .)
    VOID            reduce using rule 16 (dtype -> DOUBLE .)
    UINT8_T         reduce using rule 16 (dtype -> DOUBLE .)
    UINT16_T        reduce using rule 16 (dtype -> DOUBLE .)
    STRING          reduce using rule 16 (dtype -> DOUBLE .)
    NONDECIMAL      reduce using rule 16 (dtype -> DOUBLE .)


state 19

    (17) dtype -> FLOAT .

    ID              reduce using rule 17 (dtype -> FLOAT .)
    ASTERISK        reduce using rule 17 (dtype -> FLOAT .)
    RPAREN          reduce using rule 17 (dtype -> FLOAT .)


state 20

    (18) dtype -> INT .

    ID              reduce using rule 18 (dtype -> INT .)
    ASTERISK        reduce using rule 18 (dtype -> INT .)
    RPAREN          reduce using rule 18 (dtype -> INT .)


state 21

    (19) dtype -> VOID .

    ID              reduce using rule 19 (dtype -> VOID .)
    ASTERISK        reduce using rule 19 (dtype -> VOID .)
    RPAREN          reduce using rule 19 (dtype -> VOID .)
    COMMA           reduce using rule 19 (dtype -> VOID .)
    LPAREN          reduce using rule 19 (dtype -> VOID .)
    NEGATE          reduce using rule 19 (dtype -> VOID .)
    MINUS           reduce using rule 19 (dtype -> VOID .)
    CHAR            reduce using rule 19 (dtype -> VOID .)
    DOUBLE          reduce using rule 19 (dtype -> VOID .)
    FLOAT           reduce using rule 19 (dtype -> VOID .)
    INT             reduce using rule 19 (dtype -> VOID .)
    VOID            reduce using rule 19 (dtype -> VOID .)
    UINT8_T         reduce using rule 19 (dtype -> VOID .)
    UINT16_T        reduce using rule 19 (dtype -> VOID .)
    STRING          reduce using rule 19 (dtype -> VOID .)
    NONDECIMAL      reduce using rule 19 (dtype -> VOID .)


state 22

    (20) dtype -> UINT8_T .

    ID              reduce using rule 20 (dtype -> UINT8_T .)
    ASTERISK        reduce using rule 20 (dtype -> UINT8_T .)
    RPAREN          reduce using rule 20 (dtype -> UINT8_T .)
    COMMA           reduce using rule 20 (dtype -> UINT8_T .)
    LPAREN          reduce using rule 20 (dtype -> UINT8_T .)
    NEGATE          reduce using rule 20 (dtype -> UINT8_T .)
    MINUS           reduce using rule 20 (dtype -> UINT8_T .)
    CHAR            reduce using rule 20 (dtype -> UINT8_T .)
    DOUBLE          reduce using rule 20 (dtype -> UINT8_T .)
    FLOAT           reduce using rule 20 (dtype -> UINT8_T .)
    INT             reduce using rule 20 (dtype -> UINT8_T .)
    VOID            reduce using rule 20 (dtype -> UINT8_T .)
    UINT8_T         reduce using rule 20 (dtype -> UINT8_T .)
    UINT16_T        reduce using rule 20 (dtype -> UINT8_T .)
    STRING          reduce using rule 20 (dtype -> UINT8_T .)
    NONDECIMAL      reduce using rule 20 (dtype -> UINT8_T .)


state 23

    (21) dtype -> UINT16_T .
